crates/qubit-macros/tests/ui/handler-input-self.stderr
error: handlers cannot take `self` parameter
 --> tests/ui/handler-input-self.rs:4:21
  |
4 | async fn my_handler(self) {}
  |                     ^^^^
