crates/qubit-macros/tests/ui/handler-input-self.rs
use qubit_macros::handler;

#[handler(query)]
async fn my_handler(self) {}

fn main() {}
